# api-document-parsing

./: .env.example  README.md  deploy.py  generated_secret.py  pyproject.toml
src/: __init__.py  api.py  modal_app.py
src/core/: exporter.py  parser.py  preprocess.py
src/models/: request.py  response.py
src/utils/: auth.py  logging.py
src/vision/: __init__.py  crop.py  rotation.py
src/vision/core/: types.py
