[project]
name = "api-document-parsing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "loguru>=0.7.3",
    "modal>=1.3.5",
    "pymupdf>=1.27.2",
    "ruff>=0.15.6",
]

[tool.modal]
# deploy entry point
app = "deploy"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
